fixed box sizing if collapsed

--- a/power/src/app/bodenrichtwert/bodenrichtwert-component/bodenrichtwert.component.css
+++ b/power/src/app/bodenrichtwert/bodenrichtwert-component/bodenrichtwert.component.css
@@ -10,7 +10,7 @@
 }
 
 .verlauf {
-    min-height: calc(100vh - 106px);
+    min-height: calc(100vh - 101px);
 }
 
 .details {
